lab5/service2.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service2
  labels:
    app: nginx
  namespace: default
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30081
  type: NodePort
