lab5/ingress2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress2
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.local2
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service2
            port:
              number: 80
